--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URL = mongodb+srv://admin:project0@cluster0.tmsx6mn.mongodb.net/exercise-tracker?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://admin:_Detroit_Perscholas_@cluster0.tmsx6mn.mongodb.net/exercise-tracker?retryWrites=true&w=majority
 SECRET_KEY = hellowthisisanexercisetrackertrackyoursteps
+
